Update Open Graph and Twitter URLs to new site

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <!-- Configuração de Compartilhamento (WhatsApp, Facebook, etc) -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.localtelecom.com.br/">
+    <meta property="og:url" content="https://local-telecom.vercel.app/">
     <meta property="og:title" content="Local Telecom - A Melhor Internet da Sua Cidade 🚀">
     <meta property="og:description" content="🎮 Jogue sem lag, 🎬 Assista em 4K e 💼 Trabalhe sem travar. Planos a partir de R$ 65,00. Clique para falar com a gente!">
     <!-- Imagem de compartilhamento solicitada -->
@@ -24,7 +24,7 @@
 
     <!-- Twitter Card -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://www.localtelecom.com.br/">
+    <meta property="twitter:url" content="https://local-telecom.vercel.app/">
     <meta property="twitter:title" content="Local Telecom - Conexão de Verdade">
     <meta property="twitter:description" content="Fibra Óptica e Internet via Rádio com a melhor estabilidade. Confira nossos planos!">
     <meta property="twitter:image" content="https://www.localtelecom.com.br/resources/images/logo.png?v=1.0.1">
