--- a/index.html
+++ b/index.html
@@ -436,7 +436,9 @@
                                     <div class="text-3xl font-black text-white mb-1 group-hover:text-brand-light transition-colors">R$ 65<small class="text-sm text-gray-400">,00</small></div>
                                     <div class="text-xs text-gray-500 mb-6">/mês</div>
                                 </div>
-                                <button onclick="navigateTo('checkout-page', '50MB - R$65,00')" class="w-full py-2 rounded-lg border border-brand-primary text-brand-primary hover:bg-brand-primary hover:text-white transition-all font-bold text-sm">Assinar</button>
+                                <a href="https://wa.me/5584999999999?text=Ol%C3%A1%2C%20vi%20o%20plano%20de%2050MB%20e%20gostaria%20de%20assinar." target="_blank" class="block w-full py-3 rounded-lg bg-green-600 hover:bg-green-500 text-white transition-all font-bold text-sm shadow-lg hover:shadow-green-500/30 flex items-center justify-center gap-2 group">
+                                    <i class="fab fa-whatsapp text-lg group-hover:scale-110 transition-transform"></i> Contratar Agora
+                                </a>
                             </div>
 
                             <!-- Plano 100MB -->
@@ -450,7 +452,9 @@
                                     <div class="text-3xl font-black text-white mb-1 group-hover:text-brand-light transition-colors">R$ 70<small class="text-sm text-gray-400">,00</small></div>
                                     <div class="text-xs text-gray-500 mb-6">/mês</div>
                                 </div>
-                                <button onclick="navigateTo('checkout-page', '100MB - R$70,00')" class="w-full py-2 rounded-lg border border-brand-primary text-brand-primary hover:bg-brand-primary hover:text-white transition-all font-bold text-sm">Assinar</button>
+                                <a href="https://wa.me/5584999999999?text=Ol%C3%A1%2C%20vi%20o%20plano%20de%20100MB%20e%20gostaria%20de%20assinar." target="_blank" class="block w-full py-3 rounded-lg bg-green-600 hover:bg-green-500 text-white transition-all font-bold text-sm shadow-lg hover:shadow-green-500/30 flex items-center justify-center gap-2 group">
+                                    <i class="fab fa-whatsapp text-lg group-hover:scale-110 transition-transform"></i> Contratar Agora
+                                </a>
                             </div>
 
                             <!-- Plano 200MB -->
@@ -464,7 +468,9 @@
                                     <div class="text-3xl font-black text-white mb-1 group-hover:text-brand-light transition-colors">R$ 80<small class="text-sm text-gray-400">,00</small></div>
                                     <div class="text-xs text-gray-500 mb-6">/mês</div>
                                 </div>
-                                <button onclick="navigateTo('checkout-page', '200MB - R$80,00')" class="w-full py-2 rounded-lg border border-brand-primary text-brand-primary hover:bg-brand-primary hover:text-white transition-all font-bold text-sm">Assinar</button>
+                                <a href="https://wa.me/5584999999999?text=Ol%C3%A1%2C%20vi%20o%20plano%20de%20200MB%20e%20gostaria%20de%20assinar." target="_blank" class="block w-full py-3 rounded-lg bg-green-600 hover:bg-green-500 text-white transition-all font-bold text-sm shadow-lg hover:shadow-green-500/30 flex items-center justify-center gap-2 group">
+                                    <i class="fab fa-whatsapp text-lg group-hover:scale-110 transition-transform"></i> Contratar Agora
+                                </a>
                             </div>
 
                             <!-- Plano 400MB (DESTAQUE) -->
@@ -490,9 +496,9 @@
                                         </div>
                                     </div>
 
-                                    <button onclick="navigateTo('checkout-page', '400MB - R$100,00')" class="w-full py-3 rounded-lg bg-gradient-to-r from-brand-primary to-brand-light text-white font-black text-sm hover:shadow-[0_0_20px_rgba(0,204,255,0.6)] transition-all btn-glow uppercase tracking-wider">
-                                        <i class="fas fa-shopping-cart mr-2"></i> Assine Agora
-                                    </button>
+                                    <a href="https://wa.me/5584999999999?text=Ol%C3%A1%2C%20quero%20o%20plano%20DESTAQUE%20de%20400MB%20por%20100%20reais." target="_blank" class="block w-full py-4 rounded-lg bg-gradient-to-r from-brand-primary to-brand-light hover:to-white text-white hover:text-brand-dark font-black text-sm hover:shadow-[0_0_30px_rgba(0,204,255,0.6)] transition-all btn-glow uppercase tracking-wider flex items-center justify-center gap-2 group">
+                                        <i class="fab fa-whatsapp text-xl group-hover:scale-110 transition-transform"></i> QUERO ESSE!
+                                    </a>
                                 </div>
                             </div>
 
@@ -513,7 +519,9 @@
                                         <p class="text-[10px] text-gray-500 normal-case font-normal mt-2 border-t border-white/5 pt-2">Plano RESIDENCIAL com fidelidade.</p>
                                     </div>
                                 </div>
-                                <button onclick="navigateTo('checkout-page', '600MB - R$130,00')" class="w-full py-2 rounded-lg border border-brand-primary text-brand-primary hover:bg-brand-primary hover:text-white transition-all font-bold text-sm">Assinar</button>
+                                <a href="https://wa.me/5584999999999?text=Ol%C3%A1%2C%20vi%20o%20plano%20de%20600MB%20e%20gostaria%20de%20assinar." target="_blank" class="block w-full py-3 rounded-lg bg-green-600 hover:bg-green-500 text-white transition-all font-bold text-sm shadow-lg hover:shadow-green-500/30 flex items-center justify-center gap-2 group">
+                                    <i class="fab fa-whatsapp text-lg group-hover:scale-110 transition-transform"></i> Contratar Agora
+                                </a>
                             </div>
 
                         </div>
