Update Open Graph image URLs in index.html

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta property="og:description" content="Jogue, assista e trabalhe sem travar. Planos a partir de R$ 65,00. Fale com a gente no WhatsApp!">
     
     <!-- IMAGEM DE COMPARTILHAMENTO -->
-    <meta property="og:image" content="https://www.localtelecom.com.br/resources/images/logo.png?v=1.0.1">
-    <meta property="og:image:secure_url" content="https://www.localtelecom.com.br/resources/images/logo.png?v=1.0.1">
+    <meta property="og:image" content="https://raw.githubusercontent.com/gilneilaurindo/LocalTelecom-/main/logo%20(1).png">
+    <meta property="og:image:secure_url" content="https://raw.githubusercontent.com/gilneilaurindo/LocalTelecom-/main/logo%20(1).png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
